clusters/9ka/downloaders/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/component: tv
    app.kubernetes.io/part-of: downloaders
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/component: tv
      app.kubernetes.io/part-of: downloaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/component: tv
        app.kubernetes.io/part-of: downloaders
    spec:
      securityContext:
        # runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:4.0.20
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        startupProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /downloads
          name: complete
        - mountPath: /tv
          name: series
        - mountPath: /config
          name: config
        # - mountPath: /run
        #   name: run
        resources:
          limits:
            cpu: "1"
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - SETUID
            - SETGID
            - FOWNER
            - DAC_OVERRIDE
            - NET_BIND_SERVICE
          # readOnlyRootFilesystem: true
          # runAsUser: 1000
          # runAsGroup: 1000
          # runAsNonRoot: true
      volumes:
      - name: complete
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/downloads/complete
      - name: series
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/series
      # - name: run
      #   emptyDir:
      #     sizeLimit: 1Gi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: proxmox-zfs-nvme
      volumeMode: Filesystem
