clusters/9ka/downloaders/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/component: tv
    app.kubernetes.io/part-of: downloaders
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/component: tv
    app.kubernetes.io/part-of: downloaders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
